registro e inicio de sesion con google

--- a/scrip-trad/src/index.html
+++ b/scrip-trad/src/index.html
@@ -17,6 +17,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <meta name="google-signin-client_id" content="823313773564-nvjd2qfl421okiotcpljc5imdssbvqpj.apps.googleusercontent.com">
+  <meta name="google-signin-scope" content="profile email">
 </head>
 
 <body>
